--- a/templates/index_m.html
+++ b/templates/index_m.html
@@ -5,32 +5,25 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>GenFeng Blog</title>
-{#        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />#}
-        <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}" />
-
+        <title>Clean Blog - Start Bootstrap Theme</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-{#        <link rel="stylesheet" href="/static/css/styles.css">#}
-
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Gen Feng</a>
-                <a class="navbar-brand" href="post_total.html">post</a>
+                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
-                <a href="{{ url_for('main.login') }}">login</a>
-                <a href="{{ url_for('main.register') }}">register</a>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
@@ -42,15 +35,13 @@
             </div>
         </nav>
         <!-- Page Header-->
-{#        <header class="masthead" style="background-image: url('assets/img/home-bg.jpg')">#}
-        <header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/home-bg.jpg') }}')">
-
+        <header class="masthead" style="background-image: url('assets/img/home-bg.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
-                            <h1>Welcome to Gen Feng's Blog</h1>
-                            <span class="subheading">You can find something funny</span>
+                            <h1>Clean Blog</h1>
+                            <span class="subheading">A Blog Theme by Start Bootstrap</span>
                         </div>
                     </div>
                 </div>
@@ -60,45 +51,61 @@
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7">
-                    <div class="container">
-                        <h2 class="mt-4">login</h2>
-                        <form method="POST">
-                            {{ form.hidden_tag() }}
-                            <div class="mb-3">
-                                {{ form.username.label }} {{ form.username(class="form-control") }}
-                            </div>
-                            <div class="mb-3">
-                                {{ form.password.label }} {{ form.password(class="form-control") }}
-                            </div>
-                            <button type="submit" class="btn btn-success">{{ form.submit.label }}</button>
-                        </form>
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a href="post.html">
+                            <h2 class="post-title">Man must explore, and this is exploration at its greatest</h2>
+                            <h3 class="post-subtitle">Problems look mighty small from 150 miles up</h3>
+                        </a>
+                        <p class="post-meta">
+                            Posted by
+                            <a href="#!">Start Bootstrap</a>
+                            on September 24, 2023
+                        </p>
                     </div>
-
-{#                    <div id="post-list">#}
-{#                        <!-- Post preview-->#}
-{#                        {% for post in posts %}#}
-{#                        <div class="post-preview">#}
-{#                            <a href="{{ url_for('main.post', post_id=post.id) }}">#}
-{#                                <h2 class="post-title">{{ post.title }}</h2>#}
-{#                                <h3 class="post-subtitle">sub_title</h3>#}
-{#                            </a>#}
-{#                            <p class="post-meta">#}
-{#                                Posted by#}
-{#                                <a href="#!">{{ post.author.username }}</a>#}
-{#                                on {{ post.date_posted_readable }}#}
-{#                            </p>#}
-{#                        </div>#}
-{#                        <!-- Divider-->#}
-{#                        <hr class="my-4" />#}
-{#                        <!-- Pager-->#}
-{#                        {% endfor %}#}
-{##}
-{#                        <div id="new-posts"></div>#}
-{##}
-{#                        <div class="d-flex justify-content-end mb-4">#}
-{#                            <a class="btn btn-primary text-uppercase" href="#" id="load-more">Older Posts →</a>#}
-{#                        </div>#}
-{#                    </div>#}
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a href="post.html"><h2 class="post-title">I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.</h2></a>
+                        <p class="post-meta">
+                            Posted by
+                            <a href="#!">Start Bootstrap</a>
+                            on September 18, 2023
+                        </p>
+                    </div>
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a href="post.html">
+                            <h2 class="post-title">Science has not yet mastered prophecy</h2>
+                            <h3 class="post-subtitle">We predict too much for the next year and yet far too little for the next ten.</h3>
+                        </a>
+                        <p class="post-meta">
+                            Posted by
+                            <a href="#!">Start Bootstrap</a>
+                            on August 24, 2023
+                        </p>
+                    </div>
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    <!-- Post preview-->
+                    <div class="post-preview">
+                        <a href="post.html">
+                            <h2 class="post-title">Failure is not an option</h2>
+                            <h3 class="post-subtitle">Many say exploration is part of our destiny, but it’s actually our duty to future generations.</h3>
+                        </a>
+                        <p class="post-meta">
+                            Posted by
+                            <a href="#!">Start Bootstrap</a>
+                            on July 8, 2023
+                        </p>
+                    </div>
+                    <!-- Divider-->
+                    <hr class="my-4" />
+                    <!-- Pager-->
+                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
                 </div>
             </div>
         </div>
@@ -141,8 +148,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-{#        <script src="js/scripts.js"></script>#}
-        <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-
+        <script src="js/scripts.js"></script>
     </body>
 </html>
